--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,11 @@ services:
             - "5000:5000"
         image: flask
         container_name: flask_container
-#        command: python3 run.py --host=0.0.0.0 --port=5000
+
+        command: gunicorn --bind 0.0.0.0:5000 --workers 4 --threads 4 run:app
+        # command: gunicorn --bind 0.0.0.0:5000 run:app
+        # command: python3 run.py --host=0.0.0.0 --port=5000
+
 
         environment:
             # - FLASK_ENV=development
